# ttc-bot

./: .env  .gitignore  Cargo.toml  EXT-LICENSES  README.md  build.rs  config.yaml  readme.md  sqlx-data.json  ttc-bot.sql
.sqlx/: query-046f68f5f22192f00342a5856b3ec9fdd3772a705352c70fffe5a8e241f2abe7.json  query-084f8aa04feae7cecf4a03e78659e936dbe8c1eb3da72185a2c6962e9e32ade0.json  query-0b0b65c92e367e42db23ebaa28b087f81fc1b5c1230c297fca7e75016fcfb0c3.json  query-0d0bb60094ee998353cccee44be8a067a5f662d069eb4c466a2aecbb29a36cbc.json  query-106a24d27eb5cd245bebc99da25df56eb29966de8382b7f08cdfaba84caa1349.json  query-15b8bf5e653a7e3c9f31849847bac3e15811076f135ce9e387f2d4638e8ffa42.json  query-1d511bd05213772a48ba20469b5e94465b07b27f8efc0db027db7153470ca251.json  query-1dc62bad11339bffb676ffd4e639dea0cfd94b86756a334903916739c93fe6ad.json  query-207ec70e47bdd9274434173708d605ab0df4af6a6c9ce751cc0493f3f681f153.json  query-2847b18bbe996aee80114c78d92ae55254996ad4085ea0a2e81546bc40189fc6.json  query-2e25038525db3eede39e746c4ac0148de4f610fe15910ca92dd8368864ba2aff.json  query-335ac2fcc39ac3031085220c6f54a73fdb2c9d3e876799e394efd9fa1384641f.json  query-35c4bdacaf16c4df83c19454e9c9034ad570fb24cda59ff2c2e2fcf251bfe407.json  query-35d512503d055e074749f7b0dc21e1f49372df6735b535a36031cac1e8dfbcb3.json  query-4201b12986c3336077476cddae6b775a0eac64359462813d6ae51f4e1f9904d2.json  query-47c2fb8668888816334350faf2e9442ff4f59801188ae492cf216fc7f5208f54.json  query-5ee3be1b00cc258bda0c1bcd2df3fa4ce2a751d7bfa7c0b4546ca7cea985401f.json  query-6905847a1f9b4c857dc7f925755e275fbcbe4c2937262e4b482decbde1dc7433.json  query-691086f41c9e5561bf5a7c8d344094895d80a59399fad25ae1d81159180f1a19.json  query-70af4f116f9687287ef3c7cf363048d775a498fdc46ba571c5986c6777a84ee3.json  query-738f77b9b61eb611e2b7ee2ae6b4c31922140146ce283e4b08b095b99179d853.json  query-77b19e8652354f3352217a6c9cb267dc4d7b5d84242c43898419597ea9f1a766.json  query-786466bfdb5e07a7be440150d9eb3fb96679db67235819e2222f8ae11cee509b.json  query-84839c8c6e3de763e6a18582dddddb75749304e9b4db35a9421e2a0956c0649a.json  query-8bba89ee190fc716b74806a5988d6483e9f25cc0e106c4f69d6749b4baf60c05.json  query-91c172d2638ce214215b9879cf92d66bbe4cf32be1db6adf5ccb404644ee6acc.json  query-945aaebb73b74338649e67570f5be089893be08c94f68a2f7afe0317c49fdbe3.json  query-975b3f2c33d604deb6cd11673595ef58c10e7b53c5989a71602f9e5c62937be0.json  query-986900915d2205bc961eedcf8ff717c28761b8418ad5daeb20ebbf0fc132dce5.json  query-9ed87c7827a758e9ef9d6ce6bdb36886c5611d8ac4db0e7e5b016a94ebadd0a4.json  query-a1b9263bc4b8fedc306502d85ddd4c2eb24bf48d9203eade0411fe9fa4e486a4.json  query-a755bf07f50b5d277f05ef02a25956dc826423c183371893245c295aa9646e76.json  query-a88995e82fda7ce29e70eb95b7be92b1a1f6015846e4d6599bcf91bc3bb96262.json  query-aa86087d3c206fb459bb4cbd9d0af60f5b4307ab9e07f2dd7b7b8e480f354106.json  query-adc51e73c63c3dd1b739811ce5a6eb8423a5a91d19c390f19490065c77989dc5.json  query-bb7972cadce53049f4695443e0698c3e6f89cfe7b446054243717f9364b3d258.json  query-bf0ba0eca8ebf08f16a29f09f5c86220323b2069ce327af04a93a9318841d897.json  query-c2806ac3fe9e29ab6fb7b9c1aa5da0e65d37cf9696cf52cfbbd346c989fe7ba2.json  (+12 more)
sql/: ttc-bot.sql
src/: admin.rs  conveyance.rs  main.rs  types.rs  (+2 more)
ttc-bot/: Cargo.toml  Cross.toml  sqlx-data.json
ttc-bot/cross/docker/: freebsd-extras.sh
ttc-bot/src/: main.rs  types.rs
ttc-bot/src/client/: event_handler.rs  hooks.rs
ttc-bot/src/commands/: admin.rs  config.rs  general.rs  localisation.rs  moderation.rs  support.rs
ttc-bot/src/events/: bee.rs  bumpy_business.rs  conveyance.rs  interactions.rs  listener.rs  support.rs
ttc-bot/src/groups/: admin.rs  config.rs  general.rs  localisation.rs  moderation.rs  support.rs
ttc-bot/src/typemap/: config.rs  types.rs
ttc-bot/src/utils/: autocomplete_functions.rs  bee_script.rs  bee_utils.rs  helper_functions.rs  macros.rs
(+41 files in other folders)
