[package]
name = "ttc-bot"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1.4"
tokio = { version = "1.14", features = ["macros", "rt-multi-thread"] }
regex = "1.5.6"
sqlx = { version = "0.5.9", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "macros",
    "offline",
] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
chrono = "0.4"
rand = "0.8.5"
env_logger = "0.10.0"
log = { version = "0.4.17", features = ["std"] }
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
signal-hook = "0.3.15"
futures = "0.3.26"
humantime = "2.1.0"
reqwest = { version = "0.11.14", default-features = false, features = ["rustls-tls"] }
poise = "0.2.1"
lazy_static = "1.4.0"
strsim = "0.10.0"
magick_rust = "0.17.0"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
