[package]
name = "ttc-bot"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10.10", features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework", "collector", "unstable_discord_api"] }
clap = "2.33.3"
tokio = { version = "1.14", features = ["macros", "rt-multi-thread"]}
regex = "1.5.4"
sqlx = { version = "0.5.9", features = ["runtime-tokio-rustls", "postgres", "chrono", "macros", "offline"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
chrono = "0.4"
dotenv = "0.15"
rand = "0.8.4"
env_logger = "0.9.0"
log = { version = "0.4.14", features = ["std"] }
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
signal-hook = "0.3"
futures = "0.3"
